@@ -1,3 +1,9 @@
+2009-11-12  Doug Evans  <dje@sebabeach.org>
+
+	* rtl-c.scm (s-parallel): Use map-in-order instead of map.
+	* rtl-xform.scm (/rtx-trim-for-doc): Handle set-quiet, nop,
+	eq, ne, lt, le, gt, ge, ltu, leu, gtu, geu, index-of.
+
 2009-11-11  Doug Evans  <dje@sebabeach.org>
 
 	* html.scm (gen-insn-docs): Add logging message.
